# robot_toolkit_msgs

./: CMakeLists.txt  README.md
msg/: hand_touch_event_msg.msg  text_to_speech_status_msg.msg
srv/: battery_service_srv  get_input_srv.srv  get_segmentation3D_srv.srv  go_to_posture_srv.srv  move_head_srv.srv  navigate_to_srv.srv  point_at_srv.srv  say_to_file_srv.srv  set_angle_srv.srv  set_move_arms_enabled_srv.srv  set_open_close_hand_srv.srv  set_output_volume_srv.srv  set_security_distance_srv.srv  set_speechrecognition_srv.srv  set_stiffness_srv.srv  set_stiffnesses_srv.srv  set_words_threshold_srv.srv  tablet_service_srv.srv
